# nnrl

./: .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml
.github/workflows/: poetry-package.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
nnrl/: __init__.py  types.py  utils.py
nnrl/distributions/: diag_multivariate_normal.py
nnrl/nn/actor/policy/: deterministic.py  stochastic.py
nnrl/nn/critic/: naf_value.py  q_value.py  v_value.py
nnrl/nn/distributions/: abstract.py  categorical.py  normal.py  uniform.py
nnrl/nn/distributions/flows/: abstract.py  affine_constant.py  coupling.py  glow_1x1conv.py  maf.py  nonlinearities.py
nnrl/nn/model/stochastic/: ensemble.py  single.py  svg.py
nnrl/nn/modules/: activation.py  dist_params.py  fully_connected.py  gaussian_noise.py  lambd.py  leaf_parameter.py  linear.py  tril_matrix.py
nnrl/nn/networks/: mlp.py  resnet.py
nnrl/optim/: utils.py
tests/: __init__.py  conftest.py  pylintrc  test_nnrl.py
tests/nn/: conftest.py
tests/nn/actor/: conftest.py  test_deterministic.py  test_stochastic.py
tests/nn/critic/: test_action_value.py  test_naf_value.py  test_q_value.py  test_v_value.py
tests/nn/distributions/: test_categorical.py  test_normal.py  test_transforms.py  test_uniform.py
tests/nn/modules/: test_action_output.py  test_fully_connected.py  test_gaussian_noise.py  test_lambd.py  test_made.py  test_normalized_linear.py  test_tanh_squash.py  test_tril_matrix.py
tests/nn/networks/: test_mlp.py  test_resnet.py
tests/optim/: test_kfac.py
(+8 files in other folders)
