[tool]
[tool.poetry]
name = "nnrl"
version = "0.1.1"
homepage = "https://github.com/angelolovatto/nnrl"
description = "Top-level package for NN RL."
authors = ["Ângelo Gregório Lovatto <angelolovatto@gmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]
packages = [
    { include = "nnrl" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7"
torch = "^1.9.0"
gym = "^0.23.0"
dataclasses-json = "^0.5.4"

[tool.poetry.dev-dependencies]
flake8 = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
black = {extras = ["d"], version = "*"}
isort = "*"
pre-commit = ">=2.9.0"
pytest-mock = "^3.6.1"

[tool.isort]
profile = "black"
multi_line_output = 3



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
